--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   get: ^4.1.4
   flutter_screenutil: ^5.0.0+2
+  shimmer: ^2.0.0
   cupertino_icons: ^1.0.2
 
   flutter:
@@ -30,7 +31,6 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/icons/
 
   fonts:
     - family: appIcons
