--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 
 dependencies:
   get: ^4.1.4
-  flutter_screenutil: ^5.0.0+2
+  flutter_screenutil: ^5.1.1
   shimmer: ^2.0.0
   cupertino_icons: ^1.0.2
 
